fix(post-date): adjust spacing and fix blinking cursor at end of date typing animation

--- a/src/css/base.css
+++ b/src/css/base.css
@@ -464,7 +464,7 @@ img.avatar {
 }
 
 .post-date-container {
-  margin-top: -0.3rem;
+  margin-bottom: 1rem;
 }
 
 .post-date-typing {
